crates/rome_formatter/tests/specs/prettier/cursor/range-2.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: range-2.js

---
# Input
```js
thisWontBeFormatted  ( 1  ,3)

<<<PRETTIER_RANGE_START>>>    thisWillBeFormatted    (2  ,3,  <|> )

 <<<PRETTIER_RANGE_END>>>   thisWontBeFormatted  (2, 90  ,)
    
```

# Output
```js
thisWontBeFormatted(1, 3) << <PRETTIER_RANGE_START> >> thisWillBeFormatted(
  2,
  3,
  <|> ,
) << <PRETTIER_RANGE_END> >> thisWontBeFormatted(2, 90);

```

# Errors
```
error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ range-2.js:3:3
  │
3 │ <<<PRETTIER_RANGE_START>>>    thisWillBeFormatted    (2  ,3,  <|> )
  │   ^^^^^^^^^^^^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ range-2.js:3:63
  │
3 │ <<<PRETTIER_RANGE_START>>>    thisWillBeFormatted    (2  ,3,  <|> )
  │                                                               ^^^ TypeScript only syntax

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ range-2.js:5:4
  │
5 │  <<<PRETTIER_RANGE_END>>>   thisWontBeFormatted  (2, 90  ,)
  │    ^^^^^^^^^^^^^^^^^^^^ TypeScript only syntax


```


